--- a/templates/add_task.html
+++ b/templates/add_task.html
@@ -5,6 +5,17 @@
 
     <div class="row card-panel grey lighten-5">
         <form class="col s12" method="POST" action="">
+            <div class="input-field col s12">
+                <i class="fas fa-folder-open prefix light-blue-text text-darken-4"></i>
+                <select id="cartegory_name" name="cartegory_name" clas="validate" required>
+                  <option value="" disabled selected>Choose Category</option>
+                  {% for category in categories %}
+                    <option value= "{{ category.cartegory_name }}"">{{ category.category_name }}</option>
+                  {% endfor %}
+                </select>
+                <label for="cartegory_name">Task Category</label>
+              </div>
+            
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fas fa-pencil-alt prefix light-blue-text text-darken-4"></i>
